--- a/stylesheet.css
+++ b/stylesheet.css
@@ -159,15 +159,19 @@
   
   .lesson-icon p {
     position: absolute;
-    top: 44%;
+    top: 90%;
     width: 100%;
-    color: white;
+    color: black;
+  }
+
+  .lesson-icon img {
+    width: 150px;
   }
   
   .text-contents {
     width: 80%;
     display: inline-block;
-    margin-top: 15px;
+    margin-top: 30px;
     font-size: 15px;
     color: #b3aeb5;
   }
@@ -195,7 +199,7 @@
     box-shadow: none;
   }
   
-  footer img {
+  footer lesson-icon {
     width: 125px;
   }
   
